<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateNewTaskActivity"
    android:background="@drawable/style_page"
    >

    <ImageButton
        android:id="@+id/abortTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        android:contentDescription="@string/cancel_and_return"
        android:background="#00FFFFFF"
        android:layout_gravity="start"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

<ImageView
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:src="@drawable/add_task_icon"
    android:contentDescription="@string/add_new_task_icon"/>
    <TextView
        android:id="@+id/createNewTaskActivity"
        style="@style/custom_textview"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/create_a_new_task"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/titleEditText"
            style="@style/custom_editText"
            android:hint="@string/task_title"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"/>

        <EditText
            android:id="@+id/detailEditText"
            style="@style/custom_editText"
            android:hint="@string/details_optional"
            android:scrollHorizontally="true"/>
    </LinearLayout>

    <TextView
       style="@style/custom_textview"
        android:textSize="15sp"
        android:text="@string/task_due_date"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/custom_textview"
            android:textSize="15sp"
            android:text="@string/radiosLabel"
            android:layout_marginHorizontal="10dp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radioButton1">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/custom_radioButton"
                android:text="@string/radioText1"
                android:tag="1"/>

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/custom_radioButton"
                android:text="@string/radioText2"
                android:tag="2"/>

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/custom_radioButton"
                android:text="@string/radioText3"
                android:tag="3"/>
        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/addTaskButton"
        style="@style/custom_button_fill"
        android:text="@string/add_task_create"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
