<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTaskDetailsActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/style_page">


    <ImageButton
        android:id="@+id/abortTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        android:contentDescription="@string/cancel_and_return"
        android:background="#00FFFFFF"
        android:layout_gravity="start"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_view"
        android:contentDescription="@string/icon_showing_eye_view"/>
    <TextView
        android:id="@+id/createNewTaskActivity"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/view_edit_task"
        style="@style/custom_textview" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:textSize="15sp"
            style="@style/custom_textview"
            android:text="@string/task_status"
            android:layout_marginHorizontal="10dp"/>
        <RadioGroup
            android:id="@+id/radioGroupStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radioButtonStatusDue">

            <RadioButton
                android:id="@+id/radioButtonStatusDue"
                style="@style/custom_radioButton"
                android:text="@string/due" />

            <RadioButton
                android:id="@+id/radioButtonStatusDone"
                style="@style/custom_radioButton"
                android:text="@string/done"/>
        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/titleEditText"
            style="@style/custom_editText"
            android:hint="@string/task_title"
            android:layout_marginEnd="30dp"
            android:maxLength="30"
            android:scrollHorizontally="true"
            />

        <EditText
            android:id="@+id/detailEditText"
            style="@style/custom_editText"
            android:hint="@string/details_optional"
            android:maxLength="60"
            android:scrollHorizontally="true" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        style="@style/custom_textview"
        android:textSize="15sp"
        android:text="@string/task_due_date"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/custom_textview"
            android:textSize="15sp"
            android:text="@string/radiosLabel"
            android:layout_marginHorizontal="10dp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radioButton1">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/custom_radioButton"
                android:text="@string/radioText1"
                android:tag="1"
                />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/custom_radioButton"
                android:text="@string/radioText2"
                android:tag="2"/>

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/custom_radioButton"
                android:text="@string/radioText3"
                android:tag="3" />
        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/updateTaskButton"
        android:text="@string/update_task"
        style="@style/custom_button_fill" />
</androidx.appcompat.widget.LinearLayoutCompat>