<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/style_page">


  <ImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:src="@drawable/icon_main_menu"
      android:contentDescription="@string/icon_showing_management"/>

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
  >
  <Button
      android:id="@+id/addTaskViewButton"
      android:layout_width="250dp"
      android:layout_height="58dp"
      android:text="@string/add_task_main"
      android:textAlignment="center"
      android:textSize="20sp"
      android:backgroundTint="@color/black"
      android:layout_marginStart="22dp"
        />

    <ImageButton

        android:id="@+id/editTaskButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:src="@drawable/icon_edit"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/edit_mode"
        />

  </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:id="@+id/titleTextView"
        style="@style/custom_textview"
        android:text="@string/taskListLabel"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/listViewContainer"
        android:layout_width="match_parent"
        android:layout_height="420dp">
      
        <ListView
            android:id="@+id/tasksListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="multipleChoice"
            android:divider="@color/black"
            android:dividerHeight="3dp"
            android:background="@drawable/style_listview"
            android:textAlignment="center"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="10dp">

    <Button
        android:id="@+id/setDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/set_done"
        android:backgroundTint="@color/black"
        android:visibility="gone"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/cleanCheckedTasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/cleanTasksBtn"
        android:backgroundTint="#000000"
        android:visibility="gone"
        android:layout_marginHorizontal="3dp"/>
    <Button
        android:id="@+id/viewHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/view_history"
        android:backgroundTint="@color/black"
        android:visibility="visible" />
    <Button
        android:id="@+id/viewDueTasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/view_due_tasks"
        android:backgroundTint="@color/black"
        android:visibility="gone" />
  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>